--- a/package.json
+++ b/package.json
@@ -11,15 +11,9 @@
   },
   "dependencies": {
     "@creatachain/cat3": "^1.0.0",
-    "@walletconnect/modal": "^2.7.0",
     "@walletconnect/modal-sign-react": "^2.7.0",
-    "@web3modal/ethereum": "^2.7.1",
-    "@web3modal/react": "^2.7.1",
-    "ethers": "^5.8.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "viem": "^1.21.4",
-    "wagmi": "^0.12.10"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
